--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,11 @@ body {
     color: #ffffff;
     font-weight: 500;
     line-height: 1.5;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #404BBF;
 }
 
 .section-title {
