--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", "Raleway", sans-serif;
     color: #434455;
     font-size: 16px; 
     line-height: 1.5;
+    background-color: #ffffff;
 }
 
 .link {
     color: #2E2F42;
     text-decoration: none;
+    font-weight: 500;
+    letter-spacing: 0.02em;
 }
 .link:hover {
     color: #404BBF;
@@ -20,6 +23,8 @@ body {
 .contacts a {
     color: #434455;
     text-decoration: none;
+    font-style: normal;
+    letter-spacing: 0.02em;
 }
 .contacts a:hover {
     color: #404BBF;
@@ -31,6 +36,23 @@ body {
 .header {
     background-color: #ffffff;
 }
+
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+.logo-black {
+    color:#2E2F42;
+}
+.logo-white {
+    color: #f4f4fd;
+}
+
 .front-page {
     background-color: #2E2F42;
     text-align: center;
@@ -39,17 +61,24 @@ body {
     color: #ffffff;
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.06;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
 }
 .button {
+    font-family: "Roboto", sans-serif;
     background-color: #4D5AE5;
     color: #ffffff;
     font-weight: 500;
+    font-size: 16px;
     line-height: 1.5;
     cursor: pointer;
+    letter-spacing: 0.04em;
 }
 
 .button:hover {
+    background-color: #404BBF;
+}
+.button:focus {
     background-color: #404BBF;
 }
 
@@ -58,19 +87,48 @@ body {
     font-weight: 700;
     font-size: 36px;
     text-align: center;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
 .section-heading{
     font-weight: 500;
     font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 } 
+
+.feature-description {
+    letter-spacing: 0.02em;
+}
 
 .team {
     background-color: #F4F4FD;
 
 }
 
+.team-tile {
+    color: #ffffff;
+}
+
+.team-description {
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.portfolio-description {
+    letter-spacing: 0.02em;
+}
+
 .footer {
     color: #ffffff;
     background-color: #2E2F42;
+}
+
+.footer-text {
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
 }
