classes and style update

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,47 @@
+/* #region Base */
+
 body {
     font-family: "Roboto", sans-serif;
-    color: #434455;
-    font-size: 16px; 
-    line-height: 1.5;
-    background-color: #ffffff;
+        color: #434455;
+        font-size: 16px;
+        line-height: 1.5;
+        background-color: #ffffff;
 }
 
-.link {
-    color: #2E2F42;
+/* button {
+    cursor: pointer;
+    font-family: inherit;
+}
+
+ul,
+ol {
+    list-style-type: none;
+}
+
+a {
     text-decoration: none;
-    font-weight: 500;
-    letter-spacing: 0.02em;
-}
-.link:hover {
-    color: #404BBF;
-}
-.link:focus {
-    color: #404BBF;
-    text-decoration: underline;
+    color: currentColor;
 }
 
-.contacts{
+address {
     font-style: normal;
-}
-.contacts a {
-    color: #434455;
-    text-decoration: none;
-    letter-spacing: 0.02em;
-}
-.contacts a:hover {
-    color: #404BBF;
-}
-.contacts a:focus {
-    color: #404BBF;
-}
+} */
 
-.header {
-    background-color: #ffffff;
+/* #endregion /Base */
+
+/* #region Component */
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .logo {
@@ -48,25 +53,99 @@ body {
     text-transform: uppercase;
     color: #4d5ae5;
 }
+
 .logo-black {
-    color:#2E2F42;
+    color: #2E2F42;
 }
+
 .logo-white {
     color: #f4f4fd;
 }
 
-.front-page {
+.section-title {
+    color: #2E2F42;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.section-heading {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.description {
+    letter-spacing: 0.02em;
+}
+/* #endregion /Component */
+
+/* #region Header */
+.header {
+    background-color: #ffffff;
+}
+
+.header-nav {}
+
+.header-nav-list {}
+
+.header-nav-item {}
+
+.header-nav-link {
+    color: #2E2F42;
+    text-decoration: none;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+}
+
+.header-nav-link:hover {
+    color: #404BBF;
+}
+.header-nav-link:focus {
+    color: #404BBF;
+    text-decoration: underline;
+}
+
+.header-contacts {
+    font-style: normal;
+}
+
+.header-contact-list {}
+
+.header-contact-item {}
+
+.header-contacts-link {
+    color: #434455;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+}
+
+.header-contacts-link:hover,
+.header-contacts-link:focus {
+    color: #404BBF;
+}
+/* #endregion /Header */
+
+/* #region Hero */
+.hero {
     background-color: #2E2F42;
     text-align: center;
 }
-.page-title {
+
+.hero-title {
     color: #ffffff;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
 }
-.button {
+
+.order-button {
     font-family: "Roboto", sans-serif;
     background-color: #4D5AE5;
     color: #ffffff;
@@ -77,54 +156,64 @@ body {
     letter-spacing: 0.04em;
 }
 
-.button:hover {
+.order-button:hover,
+.order-button:focus {
     background-color: #404BBF;
 }
-.button:focus {
-    background-color: #404BBF;
-}
+/* #endregion /Hero */
 
-.section-title {
-    color:#2E2F42;
-    font-weight: 700;
-    font-size: 36px;
-    text-align: center;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-}
+/* #region Features */
+.features {}
 
-.section-heading{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-} 
+.feature-title {}
 
-.feature-description {
-    letter-spacing: 0.02em;
-}
+.feature-list {}
 
+.feature-item {}
+
+.feature-heading {}
+
+.feature-description {}
+/* #endregion /Features */
+
+/* #region Team */
 .team {
     background-color: #F4F4FD;
-
 }
 
-.team-tile {
+.team-title {}
+
+.team-list {}
+
+.team-item {
     background-color: #ffffff;
 }
 
+.team-pic {}
+
+.team-name {}
+
 .team-description {
     font-size: 16px;
-    letter-spacing: 0.02em;
     color: #434455;
 }
+/* #endregion /Team */
 
-.portfolio-description {
-    letter-spacing: 0.02em;
-}
+/* #region Portfolio */
+.portfolio {}
 
+.portfolio-title {}
+
+.portfolio-list {}
+
+.portfolio-item {}
+
+.portfolio-name {}
+
+.portfolio-description {}
+/* #endregion /Portfolio */
+
+/* #region Footer */
 .footer {
     color: #ffffff;
     background-color: #2E2F42;
@@ -132,5 +221,5 @@ body {
 
 .footer-text {
     color: #F4F4FD;
-    letter-spacing: 0.02em;
 }
+/* #endregion /Footer */
