--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ address {
 
 /* #region Component */
 
-.visually-hidden {
+/* .visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -42,7 +42,7 @@ address {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
+} */
 
 .logo {
     font-family: "Raleway", sans-serif;
