--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,20 @@ img {
     font-weight: 500;
     letter-spacing: 0.32px;
     padding: 24px 0;
+    display: block;
+    position: relative;
+}
+
+.current::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: #404BBF;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
 }
 
 .header-nav-link:hover {
@@ -177,7 +191,16 @@ img {
     background-color: #2E2F42;
     text-align: center;
     padding: 188px 0;
-    
+   
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.70),
+        rgba(46, 47, 66, 0.70)), 
+        url(/images/people-office.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .hero-container {
@@ -247,6 +270,19 @@ img {
     width: 264px;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.icon-box {
+    display: flex;
+    width: 264px;
+    height: 112px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    background: #F4F4FD;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
 }
 
 .feature-heading {
