--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,11 @@ img {
 .header {
     background-color: #ffffff;
     border-bottom: 1px solid #e7e9fc;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 .header-container {
@@ -140,6 +145,12 @@ img {
     padding: 24px 0;
     display: block;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav-link:hover,
+.header-nav-link:focus {
+    color: #404BBF;
 }
 
 .current::after {
@@ -152,14 +163,6 @@ img {
     position: absolute;
     bottom: -1px;
     left: 0;
-}
-
-.header-nav-link:hover {
-    color: #404BBF;
-}
-.header-nav-link:focus {
-    color: #404BBF;
-    text-decoration: underline;
 }
 
 .header-contacts {
@@ -178,6 +181,7 @@ img {
     color: #434455;
     text-decoration: none;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts-link:hover,
@@ -234,16 +238,22 @@ img {
     display: block;
     min-width: 169px;
     margin: 0 auto;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
+.order-button:hover,
 .order-button:focus {
     background-color: #404BBF;
 }
 
-.order-button:not(:hover) {
+.order-button:not(:hover),
+.order-button:not(:focus) {
     background-color: #4D5AE5;
 }
+
+
 /* #endregion /Hero */
 
 /* #region Features */
@@ -340,6 +350,41 @@ img {
 .team-description {
     font-size: 16px;
     color: #434455;
+    margin-bottom: 8px;
+}
+
+.team-social-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.team-social-icon {
+    
+}
+
+.team-social-link {
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    background-color: #4D5AE5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+    background-color: #404BBF;
+}
+
+
+
+.team-social-svg {
+    fill: #f4f4fd;
 }
 /* #endregion /Team */
 
@@ -365,7 +410,34 @@ img {
 }
 
 .portfolio-item {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
+.overlay-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-overlay-text {
+    color: #F4F4FD;
+    letter-spacing: 0.32px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 40px 32px 164px;
+    width: 100%;
+    height: 100%;
+    background: #4D5AE5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-overlay-text {
+    transform: translateY(0%);
 }
 
 .portfolio-card-content {
@@ -373,12 +445,10 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    flex-shrink: 0;
     border-right: 1px solid #E7E9FC;
     border-bottom: 1px solid #E7E9FC;
     border-left: 1px solid #E7E9FC;
     padding: 32px 16px;
-    align-self: stretch;
 }
 
 .portfolio-name {
@@ -389,6 +459,7 @@ img {
 /* #endregion /Portfolio */
 
 /* #region Footer */
+
 .footer {
     color: #ffffff;
     background-color: #2E2F42;
@@ -396,6 +467,11 @@ img {
 }
 
 .footer-container {
+    display: flex;
+}
+
+.footer-logo-text {
+    margin-right: 120px;
 }
 
 .footer-container .logo {
@@ -405,5 +481,47 @@ img {
 .footer-text {
     color: #F4F4FD;
     max-width: 264px;
+}
+
+.footer-socials {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.footer-social-text {
+    font-weight: 500;
+    letter-spacing: 0.32px;
+}
+
+.footer-social-list {
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.footer-social-icon {}
+
+.footer-social-link {
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    background-color: #4D5AE5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31D0AA;
+}
+
+
+.footer-social-svg {
+    fill: #f4f4fd;
 }
 /* #endregion /Footer */
