--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ img {
     left: 0;
     width: 100%;
     z-index: 1000;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -151,6 +152,10 @@ img {
 .header-nav-link:hover,
 .header-nav-link:focus {
     color: #404BBF;
+}
+
+.header-nav-link-studio {
+    color: #404bbf;
 }
 
 .current::after {
@@ -338,8 +343,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 32px;
-    
+    padding: 32px 0;
     text-align: center;
 }
 
@@ -428,7 +432,7 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 40px 32px 164px;
+    padding: 40px 32px;
     width: 100%;
     height: 100%;
     background: #4D5AE5;
@@ -468,6 +472,7 @@ img {
 
 .footer-container {
     display: flex;
+    align-items: baseline;
 }
 
 .footer-logo-text {
