--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,13 @@
 
 body {
     font-family: "Roboto", sans-serif;
-        color: #434455;
-        font-size: 16px;
-        line-height: 1.5;
-        font-style: normal;
-        font-weight: 400;
-        background-color: #ffffff;
+    color: #434455;
+    font-size: 16px;
+    line-height: 1.5;
+    font-style: normal;
+    font-weight: 400;
+    background-color: #ffffff;
+    padding-top: 73px;
 }
 
 h1,h2,h3,h4,h5,h6,p {
@@ -332,7 +333,6 @@ img {
     align-items: center;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-    padding-bottom: 32px;
 }
 
 .team-pic {}
