--- a/css/styles.css
+++ b/css/styles.css
@@ -640,13 +640,50 @@ img {
 }
 
 .modal {
-    max-width: 408px;
+    width: 408px;
     min-height: 584px;
     border-radius: 4px;
     background: #FCFCFC;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     padding: 72px 24px 24px;
+    position: relative;
 
+}
+
+.modal-close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    cursor: pointer;
+    transition: 
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover, 
+.modal-close-button:focus {
+    background-color: #404BBF;
+    border: none;
+}
+
+.modal-close-icon {
+    width: 8px;
+    height: 8px;
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover > .modal-close-icon,
+.modal-close-button:focus > .modal-close-icon {
+    fill: #FFF;
 }
 
 .modal-text {
@@ -688,8 +725,13 @@ img {
     height: 40px;
     width: 100%;
     outline: transparent;
-    padding-left: 38px;
+    padding: 11px 11px 11px 38px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.modal-input-text:focus {
+    border: 1px solid #4D5AE5;
 }
 
 .modal-input-icon {
@@ -697,9 +739,16 @@ img {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea {}
+.modal-input-text:focus + .modal-input-icon {
+    fill: #4D5AE5;
+}
+
+.modal-textarea {
+    margin-bottom: 16px;
+}
 
 .modal-textarea-label {
     color: #8E8F99;
@@ -713,9 +762,43 @@ img {
         display: block;
 }
 
-.modal-form-comment {}
+.modal-form-comment {
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    resize: none;
+    padding: 8px 16px;
+    /* text */
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
 
-.modal-checkbox-area {}
+    outline: transparent;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-comment:focus {
+    border: 1px solid #4D5AE5;
+}
+
+.modal-form-comment::placeholder {
+    color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+        font-family: Roboto;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.48px;
+}
+
+.modal-checkbox-area {
+    margin-bottom: 24px;
+}
 
 .modal-checkbox-input {}
 
@@ -729,10 +812,38 @@ img {
         letter-spacing: 0.48px;
 }
 
-.modal-checkmark-icon {}
+.modal-checkmark-icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+    width: 16px;
+    height: 16px;
+    fill: transparent;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: rgba(244, 244, 253, 1);
+    margin-right: 8px;
+    outline: transparent;
+    transition: 
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkmark-icon {
+    width: 10px;
+    height: 8px;
+    stroke-width: 1px;
+    fill: rgba(244, 244, 253, 1);
+}
+
+.modal-checkbox-input:checked + .modal-checkbox-label > .modal-checkmark-icon {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
 
 .checkbox-pp-link {
-    color: var(--IRIS, #4D5AE5);
+    color: #4D5AE5;
         font-family: Roboto;
         font-size: 12px;
         font-style: normal;
@@ -760,7 +871,13 @@ img {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     min-width: 169px;
     margin: 24px auto 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.modal-send-button:hover, 
+.modal-send-button:focus {
+    background-color: #404BBF;
 }
 
 /* #endregion /Modal */
