--- a/css/styles.css
+++ b/css/styles.css
@@ -541,11 +541,14 @@ img {
     padding: 0;
 }
 
-.subscription-label {
+.subscribe-heading {
     font-weight: 500;
     letter-spacing: 0.32px;
-    display: flex;
     margin-bottom: 16px;
+}
+
+.subscription-label {
+
 }
 
 .input-button-wrap {
@@ -594,6 +597,13 @@ img {
     gap: 16px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        font-family: Roboto;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.64px;
 }
     
     
@@ -628,28 +638,32 @@ img {
     width: 100%;
     height: 100%;
     z-index: 1000;
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
     background: rgba(46, 47, 66, 0.40);
-    opacity: 0;
     pointer-events: none;
+    opacity: 0;
+    visibility: hidden;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-overlay .is-open {
-    opacity: 1;
+.modal-overlay.is-open {
+    visibility: visible;
     pointer-events: auto;
+    opacity: 1;
 }
 
 .modal {
     width: 408px;
     min-height: 584px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 4px;
     background: #FCFCFC;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     padding: 72px 24px 24px;
-    position: relative;
+    position: absolute;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -671,7 +685,12 @@ img {
         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover, 
+
+.modal-close-button:hover {
+    background-color: #404BBF;
+        border: none;
+} 
+
 .modal-close-button:focus {
     background-color: #404BBF;
     border: none;
@@ -684,7 +703,9 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover > .modal-close-icon,
+.modal-close-button:hover > .modal-close-icon {
+    fill: #FFF;
+}
 .modal-close-button:focus > .modal-close-icon {
     fill: #FFF;
 }
@@ -716,6 +737,7 @@ img {
         line-height: 1.17;
         letter-spacing: 0.48px;
         margin-bottom: 4px;
+        display: block;
 }
 
 .modal-input-box {
@@ -729,12 +751,13 @@ img {
     width: 100%;
     outline: transparent;
     padding: 11px 11px 11px 38px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: transparent;
 
 }
 
 .modal-input-text:focus {
-    border: 1px solid #4D5AE5;
+    border-color: #4D5AE5;
 }
 
 .modal-input-icon {
@@ -773,20 +796,20 @@ img {
     resize: none;
     padding: 8px 16px;
     /* text */
-    color: #2E2F42;
+    color: rgba(46, 47, 66, 0.4);
     font-family: Roboto;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    background-color: transparent;
     outline: transparent;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-comment:focus {
-    border: 1px solid #4D5AE5;
+    border-color: #4D5AE5;
 }
 
 .modal-form-comment::placeholder {
@@ -839,10 +862,10 @@ img {
     fill: rgba(244, 244, 253, 1);
 }
 
-.modal-checkbox-input:checked + .modal-checkbox-label > .modal-checkmark-icon {
+.modal-checkbox-input:checked + .modal-checkbox-label .modal-checkmark-icon {
     background-color: #404bbf;
-    border: none;
-    fill: #F4F4FD;
+        border: none;
+        fill: #F4F4FD;
 }
 
 .checkbox-pp-link {
@@ -859,21 +882,20 @@ img {
 
 .modal-send-button {
     color:  #FFF;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.64px;
     background-color: #4D5AE5;
-    display: flex;
-    padding: 16px 32px;
-    justify-content: center;
-    align-items: flex-start;        
+    display: block;
+    padding: 16px 32px;       
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     min-width: 169px;
     margin: 24px auto 0;
+    cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
