--- a/css/styles.css
+++ b/css/styles.css
@@ -600,11 +600,11 @@ img {
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    min-width: 165px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        font-family: Roboto;
+        font-family: Roboto, sans-serif;
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -631,6 +631,7 @@ img {
 
 .subscribe-btn-icon {
     fill: #ffffff;
+    margin-left: 16px;
 }
 
 /* #endregion /Footer */
