--- a/css/styles.css
+++ b/css/styles.css
@@ -573,11 +573,13 @@ img {
     color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
 .subscription-input:focus-within {
-    border: 1px solid #4D5AE5;
+    border-color:#4D5AE5;
 }
 
 .subscription-input::placeholder {
